--- a/app/config/services.neon
+++ b/app/config/services.neon
@@ -1,3 +1,5 @@
 services:
 	- RPG\Application\Routing\RouterFactory
 	router: @RPG\Application\Routing\RouterFactory::createRouter
+	- RPG\Game\ItemEventsInitializer
+	- RPG\Game\Notifier
