--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
 	"require": {
 		"php": ">= 5.5.0",
-		"nette/nette": "~2.3"
+		"nette/nette": "~2.3",
+		"mockery/mockery": "0.9.*@dev",
+		"symfony/console": "2.6.*@dev",
+		"kdyby/doctrine": "~2.1@dev"
 	},
 	"require-dev": {
 		"nette/tester": "~1.3"
