--- a/app/config/services.neon
+++ b/app/config/services.neon
@@ -3,3 +3,6 @@ services:
 	router: @RPG\Application\Routing\RouterFactory::createRouter
 	- RPG\Game\ItemEventsInitializer
 	- RPG\Game\Notifier
+	- RPG\Game\Marketplace
+	- RPG\Game\Control\IBuyItemControlFactory
+	- RPG\Game\Players
